# 100DaysOfCode

./: .gitignore  folder_rename.ipynb  gfg.txt  learnt.txt  practice.ipynb  todo.txt
Day002/: SigResp.cpp
Day004/: HopOne.cpp
Day005/: HopTwo.cpp
Day006/: Boltz.cpp
Day008/: nodes.py
Day01/: McPitts.cpp  Sigmoid  Sigmoid.cpp  tts.py
Day010/: Stack.ipynb
Day012/: CMakeLists.txt  main.cpp
Day014/: main.cpp
Day015/: main.cpp
Day016/: CMakeLists.txt
Day017/: main.cpp
Day019/: CMakeLists.txt
Day02/: LearnIt.cpp  Learnit.cpp  SigResp.cpp
Day021/: CMakeLists.txt
Day024/: main.cpp
Day025/: main.cpp
Day027/: OpenCVml.ipynb
Day028/: OpenCVml.ipynb
Day029/: Supervised learning (errors, accuracy, recall).ipynb
Day03/: BackProp.cpp  ErrResp.cpp
Day031/: K-NN.ipynb
Day032/: linear regression.ipynb
Day034/: Logistic regression.ipynb
Day036/: Enzymology.ipynb
Day04/: HopOne.cpp
Day040/: Image color conversion.ipynb
Day041/: Data Extraction.ipynb
Day043/: processing_video.py  yolo flow img bounding box.ipynb
Day044/: sin_plot.m
Day047/: matrix operations.ipynb
Day049/: Tensor Segmentation.ipynb
Day05/: HopTwo.cpp
Day051/: learnt.txt  oddOrNot_minute.py  yourSystem.py
Day052/: builtinDataStruct.py  learnt.txt  panic.py  vowelInWord.py
Day053/: dicts.py  lists.py  sets.py
Day056/: openProcessRead.py  with.py
Day057/: db.py  learnt.txt
Day06/: Boltz.cpp  Konohen.cpp
Day060/: checker.py  learnt.txt  quick_session.py
Day13/: CMakeLists.txt  main.cpp
Day25/: CMakeLists.txt
Day26/: CMakeLists.txt  main.cpp
(+134 files in other folders)
